--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     answers: ['Tenis', 'Squash', 'Padel', 'Badminton'], 
                     correct: 0,
                     image: 'https://drive.google.com/uc?export=download&id=1Yq-etDcQUP18arRvlIVOCa1soFlfxFBC',
-                    hints: [{type:'text',content:'💡 Hraje se s raketou a míčkem'},{type:'image',content:'https://drive.google.com/uc?export=download&id=1Yq-etDcQUP18arRvlIVOCa1soFlfxFBC'}]
+                    hints: [{type:'text',content:'💡 Hraje se s raketou a míčkem'},{type:'text',content:'💡 Wimbledon, Roland Garros, US Open...'}]
                 },
                 3: { 
                     cz: 'Odehrává se v pravidelných cyklech. Jednou ve vedru, podruhé na sněhu. Vítězství tady neznamená jen zlato – ale věčnost. Jak se jmenuje tato oslava lidského odhodlání a síly?', 
@@ -132,7 +132,7 @@
                     answers: ['Olympijské hry', 'Mistrovství světa', 'Evropské hry', 'Letní olympiáda'], 
                     correct: 0,
                     image: 'https://drive.google.com/uc?export=download&id=1JFC1vqmP4UUcBLlV_okc-9bef1vB3SkJ',
-                    hints: [{type:'text',content:'💡 Konají se každé 4 roky'},{type:'image',content:'https://drive.google.com/uc?export=download&id=1JFC1vqmP4UUcBLlV_okc-9bef1vB3SkJ'}]
+                    hints: [{type:'text',content:'💡 Konají se každé 4 roky'},{type:'text',content:'💡 Letní i zimní verze'}]
                 },
                 4: { 
                     cz: 'Dva soupeři, tři kola, deset sekund může rozhodnout vše. Vítěz tu neodchází s míčem, ale s úderem. O jaký sport se jedná?', 
@@ -140,7 +140,7 @@
                     answers: ['Box', 'MMA', 'Zápas', 'Kickbox'], 
                     correct: 0,
                     image: 'https://drive.google.com/uc?export=download&id=1rkI0AYu1ywy4AurOE1NOhuGw_oyUF_vw',
-                    hints: [{type:'text',content:'💡 Používají se boxerské rukavice'},{type:'image',content:'https://drive.google.com/uc?export=download&id=1rkI0AYu1ywy4AurOE1NOhuGw_oyUF_vw'}]
+                    hints: [{type:'text',content:'💡 Používají se boxerské rukavice'},{type:'text',content:'💡 Muhammad Ali, Mike Tyson...'}]
                 },
                 5: { 
                     cz: 'Kolo za kolem, každý krok má svůj rytmus. Když se spojí síla, dech a strategie, vítězí ten, kdo ví, kdy zaútočit. O jaký sport jde?', 
@@ -148,7 +148,7 @@
                     answers: ['Atletika (běh)', 'Rychlobruslení', 'Veslování', 'Cyklistika na dráze'], 
                     correct: 0,
                     image: 'https://drive.google.com/uc?export=download&id=1YTNUlOKp5j7HcWZip6VGFE8XLohay8Qo',
-                    hints: [{type:'text',content:'💡 Běží se na atletické dráze'},{type:'image',content:'https://drive.google.com/uc?export=download&id=1YTNUlOKp5j7HcWZip6VGFE8XLohay8Qo'}]
+                    hints: [{type:'text',content:'💡 Běží se na atletické dráze'},{type:'text',content:'💡 100m, 200m, 400m, maraton...'}]
                 }
             }
         };
