--- a/index.html
+++ b/index.html
@@ -111,45 +111,11 @@
                 5: { cz: 'Tři lodě tiše prorážely mlhu Atlantiku. Na palubě posádka, která netušila, že mění dějiny. V kterém roce se tato výprava vydala na cestu?', it: 'Tre navi silenziose attraversavano la nebbia dell\'Atlantico. A bordo un equipaggio che non sapeva di cambiare la storia. In che anno questa spedizione intraprese il viaggio?', answers: ['1492', '1500', '1520', '1534'], correct: 0, hints: [{type:'text',content:'💡 Objevení Ameriky / Scoperta dell\'America'},{type:'image',content:'https://lh3.googleusercontent.com/d/1nghpjz1PlTzGQ9xyyGqffv5UJfEuowWq'}] }
             },
             8: { // Sport
-                1: { 
-                    cz: 'Stojí tam sám. Jeden míč, jeden pohyb, jeden gól… nebo ne. Je to fotbal, házená, nebo jiný sport? Z jakého místa se právě chystá vystřelit?', 
-                    it: 'Sta lì da solo. Una palla, un movimento, un gol... o no. È calcio, pallamano o un altro sport? Da quale posizione sta per tirare?', 
-                    answers: ['Penalta (fotbal)', 'Samostatný nájezd (lední hokej)', '7metrový hod (házená)', 'Nájezd (pozemní hokej)'], 
-                    correct: 0,
-                    image: 'https://drive.google.com/uc?export=download&id=1CLp94fpLLeVfcBFOVSnyu_-xcvytJ9mY'
-                },
-                2: { 
-                    cz: 'Hraje se venku i pod střechou. Povrch se mění jako roční období – oranžový, zelený, modrý. Rychlost, ticho a rozhodující údery. O jaký sport jde?', 
-                    it: 'Si gioca all\'aperto e al coperto. La superficie cambia come le stagioni – arancione, verde, blu. Velocità, silenzio e colpi decisivi. Di quale sport si tratta?', 
-                    answers: ['Tenis', 'Squash', 'Padel', 'Badminton'], 
-                    correct: 0,
-                    image: 'https://drive.google.com/uc?export=download&id=1Yq-etDcQUP18arRvlIVOCa1soFlfxFBC',
-                    hints: [{type:'text',content:'💡 Hraje se s raketou a míčkem'},{type:'text',content:'💡 Wimbledon, Roland Garros, US Open...'}]
-                },
-                3: { 
-                    cz: 'Odehrává se v pravidelných cyklech. Jednou ve vedru, podruhé na sněhu. Vítězství tady neznamená jen zlato – ale věčnost. Jak se jmenuje tato oslava lidského odhodlání a síly?', 
-                    it: 'Si svolge in cicli regolari. Una volta nel caldo, un\'altra sulla neve. La vittoria qui non significa solo oro – ma eternità. Come si chiama questa celebrazione della determinazione e forza umana?', 
-                    answers: ['Olympijské hry', 'Mistrovství světa', 'Evropské hry', 'Letní olympiáda'], 
-                    correct: 0,
-                    image: 'https://drive.google.com/uc?export=download&id=1JFC1vqmP4UUcBLlV_okc-9bef1vB3SkJ',
-                    hints: [{type:'text',content:'💡 Konají se každé 4 roky'},{type:'text',content:'💡 Letní i zimní verze'}]
-                },
-                4: { 
-                    cz: 'Dva soupeři, tři kola, deset sekund může rozhodnout vše. Vítěz tu neodchází s míčem, ale s úderem. O jaký sport se jedná?', 
-                    it: 'Due avversari, tre round, dieci secondi possono decidere tutto. Il vincitore non se ne va con una palla, ma con un pugno. Di quale sport si tratta?', 
-                    answers: ['Box', 'MMA', 'Zápas', 'Kickbox'], 
-                    correct: 0,
-                    image: 'https://drive.google.com/uc?export=download&id=1rkI0AYu1ywy4AurOE1NOhuGw_oyUF_vw',
-                    hints: [{type:'text',content:'💡 Používají se boxerské rukavice'},{type:'text',content:'💡 Muhammad Ali, Mike Tyson...'}]
-                },
-                5: { 
-                    cz: 'Kolo za kolem, každý krok má svůj rytmus. Když se spojí síla, dech a strategie, vítězí ten, kdo ví, kdy zaútočit. O jaký sport jde?', 
-                    it: 'Giro dopo giro, ogni passo ha il suo ritmo. Quando si uniscono forza, respiro e strategia, vince chi sa quando attaccare. Di quale sport si tratta?', 
-                    answers: ['Atletika (běh)', 'Rychlobruslení', 'Veslování', 'Cyklistika na dráze'], 
-                    correct: 0,
-                    image: 'https://drive.google.com/uc?export=download&id=1YTNUlOKp5j7HcWZip6VGFE8XLohay8Qo',
-                    hints: [{type:'text',content:'💡 Běží se na atletické dráze'},{type:'text',content:'💡 100m, 200m, 400m, maraton...'}]
-                }
+                1: { cz: 'Stojí tam sám. Jeden míč, jeden pohyb, jeden gól… nebo ne. Je to fotbal, házená, nebo jiný sport? Z jakého místa se právě chystá vystřelit?', it: 'Sta lì da solo. Una palla, un movimento, un gol... o no. È calcio, pallamano o un altro sport? Da quale posizione sta per tirare?', answers: ['Penalta (fotbal)', 'Samostatný nájezd (lední hokej)', '7metrový hod (házená)', 'Nájezd (pozemní hokej)'], correct: 0, image: 'https://lh3.googleusercontent.com/d/1CLp94fpLLeVfcBFOVSnyu_-xcvytJ9mY' },
+                2: { cz: 'Hraje se venku i pod střechou. Povrch se mění jako roční období – oranžový, zelený, modrý. Rychlost, ticho a rozhodující údery. O jaký sport jde?', it: 'Si gioca all\'aperto e al coperto. La superficie cambia come le stagioni – arancione, verde, blu. Velocità, silenzio e colpi decisivi. Di quale sport si tratta?', answers: ['Tenis', 'Squash', 'Padel', 'Badminton'], correct: 0, hints: [{type:'text',content:'💡 Hraje se s raketou a míčkem'},{type:'image',content:'https://lh3.googleusercontent.com/d/1Yq-etDcQUP18arRvlIVOCa1soFlfxFBC'}] },
+                3: { cz: 'Odehrává se v pravidelných cyklech. Jednou ve vedru, podruhé na sněhu. Vítězství tady neznamená jen zlato – ale věčnost. Jak se jmenuje tato oslava lidského odhodlání a síly?', it: 'Si svolge in cicli regolari. Una volta nel caldo, un\'altra sulla neve. La vittoria qui non significa solo oro – ma eternità. Come si chiama questa celebrazione della determinazione e forza umana?', answers: ['Olympijské hry', 'Mistrovství světa', 'Evropské hry', 'Letní olympiáda'], correct: 0, hints: [{type:'text',content:'💡 Konají se každé 4 roky'},{type:'image',content:'https://lh3.googleusercontent.com/d/1JFC1vqmP4UUcBLlV_okc-9bef1vB3SkJ'}] },
+                4: { cz: 'Dva soupeři, tři kola, deset sekund může rozhodnout vše. Vítěz tu neodchází s míčem, ale s úderem. O jaký sport se jedná?', it: 'Due avversari, tre round, dieci secondi possono decidere tutto. Il vincitore non se ne va con una palla, ma con un pugno. Di quale sport si tratta?', answers: ['Box', 'MMA', 'Zápas', 'Kickbox'], correct: 0, hints: [{type:'text',content:'💡 Používají se boxerské rukavice'},{type:'image',content:'https://lh3.googleusercontent.com/d/1rkI0AYu1ywy4AurOE1NOhuGw_oyUF_vw'}] },
+                5: { cz: 'Kolo za kolem, každý krok má svůj rytmus. Když se spojí síla, dech a strategie, vítězí ten, kdo ví, kdy zaútočit. O jaký sport jde?', it: 'Giro dopo giro, ogni passo ha il suo ritmo. Quando si uniscono forza, respiro e strategia, vince chi sa quando attaccare. Di quale sport si tratta?', answers: ['Atletika (běh)', 'Rychlobruslení', 'Veslování', 'Cyklistika na dráze'], correct: 0, hints: [{type:'text',content:'💡 Běží se na atletické dráze'},{type:'image',content:'https://lh3.googleusercontent.com/d/1YTNUlOKp5j7HcWZip6VGFE8XLohay8Qo'}] }
             }
         };
 
