--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 6: { cz: 'Který film drží rekord jako nejdražší film v historii (rozpočet přes 400 milionů dolarů)?', it: 'Quale film detiene il record come film più costoso della storia (budget oltre 400 milioni di dollari)?', answers: ['Star Wars: The Force Awakens', 'Avatar', 'Avengers: Endgame', 'Pirates of the Caribbean'], correct: 0 }
             },
             6: { // Nature
-                1: { cz: 'Jaké je největší zvíře na světě?', it: 'Qual è l\'animale più grande del mondo?', answers: ['Slon / Elefante', 'Žirafa / Giraffa', 'Modrá velryba / Balenottera azzurra', 'Nosorožec / Rinoceronte'], correct: 2 },
+                1: { cz: 'Jaké je největší zvíře na světě?', it: 'Qual è l\'animale più grande del mondo?', answers: ['Žralok obrovský / Squalo gigante', 'Velryba jižní / Balena australe', 'Modrá velryba / Balenottera azzurra', 'Slon africký / Elefante africano'], correct: 2 },
                 2: { cz: 'Tichý tkadlec visící mezi větvemi. Má osm končetin a mistrovské dílo z hedvábí. O kom je řeč?', it: 'Silenzioso tessitore appeso tra i rami. Ha otto arti e un capolavoro di seta. Di chi si parla?', answers: ['Mravenec / Formica', 'Pavouk / Ragno', 'Stonožka / Millepiedi', 'Brouk / Scarafaggio'], correct: 1, hints: [{type:'text',content:'💡 Loví hmyz'},{type:'image',content:'https://lh3.googleusercontent.com/d/1fu6i8wBraTZj3JeC4BbDfk1H5qpoPs0L'}] },
                 3: { cz: 'Žije tam, kde jiní zmrznou. Nepotřebuje křídla k letu, protože ve vodě je rychlejší než většina ryb. Kdo je tento obyvatel ledového království?', it: 'Vive dove gli altri congelano. Non ha bisogno di ali per volare, perché in acqua è più veloce della maggior parte dei pesci. Chi è questo abitante del regno ghiacciato?', answers: ['Mrož / Tricheco', 'Tučňák / Pinguino', 'Lední medvěd / Orso polare', 'Polární liška / Volpe artica'], correct: 1, hints: [{type:'text',content:'💡 Žije v nejchladnějším místě na Zemi'},{type:'image',content:'https://lh3.googleusercontent.com/d/1_IgBBs54MXpn6m2r44gHYKev0NYZ2CtG'}] },
                 4: { cz: 'Vysoký tvor tiše kráčí mezi stromy. Jeho krk se tyčí nad krajinou, ale nikdo si není jistý, kdo to vlastně je. Které zvíře to může být?', it: 'Una creatura alta cammina silenziosamente tra gli alberi. Il suo collo si erge sopra il paesaggio, ma nessuno è sicuro di chi sia veramente. Quale animale potrebbe essere?', answers: ['Brontosaurus', 'Žirafa / Giraffa', 'Velbloud / Cammello', 'Pštros / Struzzo'], correct: 1, hints: [{type:'text',content:'💡 Je to nejvyšší zvíře na světě'},{type:'image',content:'https://lh3.googleusercontent.com/d/1AZ-ysk-Dz7PpOkEAt-Mou0-Cc7Ego9uW'}] },
@@ -134,8 +134,8 @@
                 2: { cz: 'Hraje se venku i pod střechou. Povrch se mění jako roční období – oranžový, zelený, modrý. Rychlost, ticho a rozhodující údery. O jaký sport jde?', it: 'Si gioca all\'aperto e al coperto. La superficie cambia come le stagioni – arancione, verde, blu. Velocità, silenzio e colpi decisivi. Di quale sport si tratta?', answers: ['Tenis', 'Squash', 'Padel', 'Badminton'], correct: 0, hints: [{type:'text',content:'💡 Hraje se s raketou a míčkem'},{type:'image',content:'https://lh3.googleusercontent.com/d/1Yq-etDcQUP18arRvlIVOCa1soFlfxFBC'}] },
                 3: { cz: 'Odehrává se v pravidelných cyklech. Jednou ve vedru, podruhé na sněhu. Vítězství tady neznamená jen zlato – ale věčnost. Jak se jmenuje tato oslava lidského odhodlání a síly?', it: 'Si svolge in cicli regolari. Una volta nel caldo, un\'altra sulla neve. La vittoria qui non significa solo oro – ma eternità. Come si chiama questa celebrazione della determinazione e forza umana?', answers: ['Olympijské hry', 'Mistrovství světa', 'Evropské hry', 'Letní olympiáda'], correct: 0, hints: [{type:'text',content:'💡 Konají se každé 4 roky'},{type:'image',content:'https://lh3.googleusercontent.com/d/1JFC1vqmP4UUcBLlV_okc-9bef1vB3SkJ'}] },
                 4: { cz: 'Dva soupeři, tři kola, deset sekund může rozhodnout vše. Vítěz tu neodchází s míčem, ale s úderem. O jaký sport se jedná?', it: 'Due avversari, tre round, dieci secondi possono decidere tutto. Il vincitore non se ne va con una palla, ma con un pugno. Di quale sport si tratta?', answers: ['Box', 'MMA', 'Zápas', 'Kickbox'], correct: 0, hints: [{type:'text',content:'💡 Používají se boxerské rukavice'},{type:'image',content:'https://lh3.googleusercontent.com/d/1rkI0AYu1ywy4AurOE1NOhuGw_oyUF_vw'}] },
-                5: { cz: 'Kolo za kolem, každý krok má svůj rytmus. Když se spojí síla, dech a strategie, vítězí ten, kdo ví, kdy zaútočit. O jaký sport jde?', it: 'Giro dopo giro, ogni passo ha il suo ritmo. Quando si uniscono forza, respiro e strategia, vince chi sa quando attaccare. Di quale sport si tratta?', answers: ['Atletika (běh)', 'Rychlobruslení', 'Veslování', 'Cyklistika na dráze'], correct: 0, hints: [{type:'text',content:'💡 Běží se na atletické dráze'},{type:'image',content:'https://lh3.googleusercontent.com/d/1YTNUlOKp5j7HcWZip6VGFE8XLohay8Qo'}] },
-                6: { cz: 'Který plavec vyhrál nejvíce zlatých olympijských medailí v historii?', it: 'Quale nuotatore ha vinto il maggior numero di medaglie d\'oro olimpiche nella storia?', answers: ['Michael Phelps (23 zlatých)', 'Mark Spitz', 'Ryan Lochte', 'Ian Thorpe'], correct: 0 }
+                5: { cz: 'Kolo za kolem, každý krok má svůj rytmus. Když se spojí síla, dech a strategie, vítězí ten, kdo ví, kdy zaútočit. O jaký sport jde?', it: 'Giro dopo giro, ogni passo ha il suo ritmo. Quando si uniscono forza, respiro e strategia, vince chi sa quando attaccare. Di quale sport si tratta?', answers: ['Atletika', 'Rychlobruslení', 'Veslování', 'Cyklistika na dráze'], correct: 0, hints: [{type:'text',content:'💡 Běží se na atletické dráze'},{type:'image',content:'https://lh3.googleusercontent.com/d/1YTNUlOKp5j7HcWZip6VGFE8XLohay8Qo'}] },
+                6: { cz: 'Který plavec vyhrál nejvíce zlatých olympijských medailí v historii?', it: 'Quale nuotatore ha vinto il maggior numero di medaglie d\'oro olimpiche nella storia?', answers: ['Michael Phelps', 'Mark Spitz', 'Ryan Lochte', 'Ian Thorpe'], correct: 0 }
             }
         };
 
@@ -165,9 +165,15 @@
                         this.initializeGame();
                     } else {
                         this.gameData = newData;
-                        this.render();
+                        // Only render if not showing intro
+                        if (this.view !== 'intro') {
+                            this.render();
+                        }
                     }
                 });
+                
+                // Initial render for intro
+                this.render();
             }
 
             initializeGame() {
